[package]
name = "site-api"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
axum = "0.7.9"
axum-aws-lambda = "0.9.0"
derive = "1.0.0"
features = "0.10.0"
hyper = "1.5.0"
lambda_http = "0.13.0"
serde = "1.0.215"
serde_json = "1.0.133"

tokio = { version = "1", features = ["macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "compression-gzip", "compression-deflate", "trace", "normalize-path", "add-extension"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

